# makima-bot

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDPP.cmake  FindOGGZ.cmake
src/: main.cpp
